# StreamView

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CONTEXT.md  LICENSE  README.md  README.zh-CN.md
.github/workflows/: ci.yml
cmake/: StreamViewWarnings.cmake
docs/: README.md  analysis-model.md  core-model.md  implementation-plan.md  product-requirements.md  standards.md
docs/adr/: 0001-shared-format-definition-model.md  0002-tiered-desktop-platform-support.md  0003-local-files-before-live-sources.md  0004-lazy-analysis-for-large-files.md  0005-tolerant-partial-analysis.md  0006-sandboxed-declarative-rules.md  0007-separate-persistent-analysis-sessions.md  0008-mit-license.md  0009-cpp-qt-and-github-ci-matrix.md  0010-c-style-declarative-format-language.md  0011-dual-coordinates-and-source-mappings.md  0012-mapping-preserving-rule-transformations.md  0013-rules-declare-lazy-boundaries.md  0014-independent-language-and-rule-versions.md  0015-local-rule-package-distribution.md  0016-toml-manifest-and-zip-rule-packages.md  0017-windows-qt-ci-artifact-fallback.md  0018-portable-cancellation-state.md  0019-skip-ci-for-markdown-only-changes.md
docs/format-language/: README.md
docs/zh-CN/: README.md  analysis-model.md  core-model.md  product-requirements.md  standards.md
docs/zh-CN/adr/: 0017-windows-qt-ci-artifact-fallback.md  0018-portable-cancellation-state.md  0019-skip-ci-for-markdown-only-changes.md
docs/zh-CN/format-language/: README.md
src/app/: CMakeLists.txt  analysis_session.cpp  analysis_session.h  analysis_tree_model.cpp  analysis_tree_model.h  field_inspector.cpp  field_inspector.h  main.cpp  main_window.cpp  main_window.h  raw_data_model.cpp  raw_data_model.h  raw_data_view.cpp  raw_data_view.h  source_selection.h
src/core/: CMakeLists.txt  analysis_model.cpp  bit_reader.cpp  coordinates.cpp  source.cpp  source_pager.cpp  version.cpp
src/core/include/streamview/core/: analysis_model.h  bit_reader.h  cancellation.h  coordinates.h  source.h  source_pager.h  version.h
src/rules/: CMakeLists.txt  dsl.cpp  dsl_executor.cpp  dsl_ir.cpp  dsl_vm.cpp  h264_annex_b_analyzer.cpp  h264_annex_b_detector.cpp  h264_start_code_prefix.h  h264_start_code_scanner.cpp  language_version.cpp
src/rules/include/streamview/rules/: dsl.h  dsl_executor.h  dsl_ir.h  dsl_vm.h  h264_annex_b_analyzer.h  h264_annex_b_detector.h  h264_start_code_scanner.h  language_version.h
src/rules/official/: h264_annex_b.svfmt
tests/: CMakeLists.txt
tests/app/: analysis_session_test.cpp  analysis_tree_model_test.cpp  field_inspector_test.cpp  main_window_test.cpp  raw_data_model_test.cpp  raw_data_view_test.cpp
tests/core/: analysis_model_test.cpp  bit_reader_test.cpp  cancellation_test.cpp  coordinates_test.cpp  source_pager_test.cpp  source_test.cpp  version_test.cpp
tests/rules/: dsl_executor_test.cpp  dsl_ir_test.cpp  dsl_test.cpp  h264_annex_b_analyzer_test.cpp  h264_annex_b_detector_test.cpp  h264_start_code_scanner_test.cpp
tests/tools/: svtool_test.cpp
tools/svtool/: CMakeLists.txt  main.cpp
